TP4/part1_pod_create.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: tp4
  name: part1
spec:
  containers:
  - name: api
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
