TP4/part3_add_strategy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tp4
  name: part3
spec:
  replicas: 4
  selector:
    matchLabels:
      app: part3
  template:
    metadata:
      labels:
        app: part3
    spec:
      containers:
      - name: api
        image: registry.cluster.wik.cloud/public/echo
        ports:
        - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
