TP4/part4_create_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mon-service
  namespace: tp4
spec:
  selector:
    app: part2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
