TP4/part5_ingress_nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: mon-service
  namespace: tp4
spec:
  selector:
    app: part2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tpkubernetes-ingress
  namespace: tp4
spec:
  ingressClassName: nginx
  rules:
  - host: tpkubernetes.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mon-service
            port:
              number: 8080
